@@ -135,9 +135,11 @@ PathOCLBaseRenderEngine::~PathOCLBaseRenderEngine() {
 void PathOCLBaseRenderEngine::InitGPUTaskConfiguration() {
 	// Scene configuration
 	taskConfig.scene.defaultVolumeIndex = compiledScene->defaultWorldVolumeIndex;
-	
+
 	// Path Tracer configuration
 	taskConfig.pathTracer = compiledScene->compiledPathTracer;
+
+	taskConfig.pixelFilter = *oclPixelFilter;
 }
 
 void PathOCLBaseRenderEngine::InitPixelFilterDistribution() {
