@@ -48,9 +48,12 @@ slg::ocl::Filter *BoxFilter::FromPropertiesOCL(const Properties &cfg) {
 
 	slg::ocl::Filter *oclFilter = new slg::ocl::Filter();
 
-	oclFilter->type = slg::ocl::FILTER_BOX;
-	oclFilter->box.widthX = filterXWidth;
-	oclFilter->box.widthY = filterYWidth;
+//	oclFilter->type = slg::ocl::FILTER_BOX;
+//	oclFilter->box.widthX = filterXWidth;
+//	oclFilter->box.widthY = filterYWidth;
+
+	oclFilter->widthX = filterXWidth;
+	oclFilter->widthY = filterYWidth;
 
 	return oclFilter;
 }
